Revert "- Supports android gradle plugin 3.6.1 - Upgrade inner aspectjrt version to 1.9.5"
This reverts commit c5ab2c597e15456d8b3f967d05833614297e4c89.

--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,12 @@ apply from: 'ext.gradle'
 buildscript {
     repositories {
         mavenLocal()
-        google()
+        mavenCentral()
         jcenter()
+    }
+
+    dependencies {
+//        classpath 'org.aspectj:aspectjtools:1.8.9'
     }
 }
 
@@ -12,9 +16,9 @@ allprojects {
     buildscript {
         repositories {
             mavenLocal()
-            google()
+            mavenCentral()
             jcenter {
-               url 'https://jcenter.bintray.com'
+               url 'http://jcenter.bintray.com'
             }
         }
     }
@@ -22,12 +26,16 @@ allprojects {
     dependencies {
         repositories {
             mavenLocal()
-            google()
+            mavenCentral()
             jcenter {
-                url 'https://jcenter.bintray.com'
+                url 'http://jcenter.bintray.com'
             }
         }
     }
 
     apply plugin: 'maven'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.14.1'
 }
